Trivial: Moved git repository to "pas/core"

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ direct PAS
 Python Application Services
 ----------------------------------------------------------------------------
 The following agreement is valid for all files and subdirectories of
-pas_core (git)
+pas/core (git)
 ----------------------------------------------------------------------------
 
 Fiduciary Licence Agreement
