Enhancement: Added support for keyword arguments for "get_instance()" and "get_singleton()" in "NamedLoader" Fix: Added missing "InstanceLock" and "ThreadLock" classes Change: Added additional cache check for "init()" in "L10n"

--- a/lang/en/core.json
+++ b/lang/en/core.json
@@ -5,6 +5,8 @@
  "core_no": "No",
  "core_yes": "Yes",
 
+ "core_timezone_gmt": "GMT",
+
  "core_title_error": "Error message",
  "core_title_error_critical": "Critical error message",
  "core_title_error_details": "Additional error information",
