--- a/lang/de_formal/core.json
+++ b/lang/de_formal/core.json
@@ -5,6 +5,8 @@
  "core_no": "Nein",
  "core_yes": "Ja",
 
+ "core_timezone_gmt": "GMT",
+
  "core_title_error": "Fehlermeldung",
  "core_title_error_critical": "Kritische Fehlermeldung",
  "core_title_error_details": "Weitere Informationen zur Fehlermeldung",
